--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,9 @@
 name: Run JavaScript Script
 
 on:
+  workflow_dispatch:  # 手動実行を追加
   schedule:
-    - cron: '30 8 * * *'  # UTC時間で毎日8:30に実行
+    - cron: '30 23 * * *'  # 日本時間8:30 (UTCの23:30に相当)
 
 jobs:
   build:
