--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,4 +22,6 @@ jobs:
       run: npm install
       
     - name: Run script
+      env:
+        DOCBASE_TOKEN: ${{ secrets.DOCBASE_TOKEN }}  # 環境変数を追加
       run: node main.js  # main.js を実行します。
