日本のタイムゾーンに合わせるため、main.ymlの設定を変更しました。

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,5 @@ jobs:
     - name: Run script
       env:
         DOCBASE_TOKEN: ${{ secrets.DOCBASE_TOKEN }}  # 環境変数を追加
+        TZ: 'Asia/Tokyo'  # タイムゾーンを設定
       run: node main.js  # main.js を実行します。
